--- a/docker-compose/devops/logging/efk/fluent_agent.conf
+++ b/docker-compose/devops/logging/efk/fluent_agent.conf
@@ -1,11 +1,10 @@
-#collect data
 <source>
   @type tail
   @id input_tail_containers
   path /logs/docker_logs/*/*-json.log
   pos_file /data/docker.pos
   read_from_head true
-  tag docker.**
+  tag "docker.**"
   skip_refresh_on_startup false
   refresh_interval 10s
   enable_watch_timer true
@@ -13,40 +12,55 @@
   <parse>
     @type "json"
     time_format %Y-%m-%dT%H:%M:%S.%NZ
+    localtime
   </parse>
 </source>
 
-# Do not collect fluentd's own logs to avoid infinite loops.
 <label @FLUENT_LOG>
   <match fluent.**>
     @type null
   </match>
 </label>
 
-# add field with hostname
-<filter docker.logs.**>
-  @type record_transformer
-  enable_ruby
-  <record>
-    hostname "#{Socket.gethostname}"
-  </record>
-</filter>
-
+# change tag to need tag with rule on pattern (servise_name like all)
 <match docker.logs.**>
   @type rewrite_tag_filter
   <rule>
    key $['attrs']['service_name']
-   pattern "^#{ENV['env']}_.+$"
+   pattern ^(.*)
    tag "docker.#{ENV['env']}"
   </rule>
 </match>
+
+<filter "docker.#{ENV['env']}">
+  @type record_transformer
+  enable_ruby
+  <record>
+    hostname "#{Socket.gethostname}"
+ </record>
+</filter>
+
+<filter "docker.#{ENV['env']}">
+  @type parser
+  format json
+  key_name log
+ reserve_data true
+</filter>
+
+<filter "docker.#{ENV['env']}">
+  @type concat
+  key log
+  stream_identity_key container_id
+  multiline_start_regexp /^-e:2:in `\/'/
+  multiline_end_regexp /^-e:4:in/
+</filter>
 
 <match "docker.#{ENV['env']}">
   @type forward
   @id forward_docker
   <server>
     name main_server
-    host 172.29.27.62
+    host "#{ENV['collector_ip']}" 
     port 24224
   </server>
   <buffer>
