--- a/docker-compose/devops/logging/efk/fluent_collector.conf
+++ b/docker-compose/devops/logging/efk/fluent_collector.conf
@@ -6,7 +6,6 @@
   bind 0.0.0.0
 </source>
 
-
 <match docker.**>
   @type copy
   <store>
@@ -16,7 +15,7 @@
     index_name ${tag}
     logstash_format true
     #logstash_dateformat %Y.%m.%d
-    logstash_prefix docker
+    logstash_prefix ${tag}
     include_tag_key true
     tag_key "@log_name"
     reconnect_on_error true
