--- a/docker-compose/devops/gitlab/docker-compose.yml
+++ b/docker-compose/devops/gitlab/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         gitlab_rails['smtp_address'] = "smtp.mail.ru"
         gitlab_rails['smtp_port'] = 25
         gitlab_rails['smtp_user_name'] = "gitlab@company.ru"
-        gitlab_rails['smtp_password'] = "xcK3GzaWDAszEDb2YEhNQq7N8P"
+        gitlab_rails['smtp_password'] = "password"
         #gitlab_rails['smtp_domain'] = "company.ru"
         gitlab_rails['smtp_authentication'] = "login"
         #gitlab_rails['smtp_enable_starttls_auto'] = true
