--- a/Dockerfile/Django/docker-compose.yml
+++ b/Dockerfile/Django/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.6"
 services:
   webdjango:
-    image: registry.company_name.com/${app_name}/${app_name}_${env}:${version}
+    image: registry.company.com/${app_name}/${app_name}_${env}:${version}
     container_name: django
     restart: always
     build: .
     #command: python manage.py runserver 0.0.0.0:8000
-    command: gunicorn shakti.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn company.wsgi:application --bind 0.0.0.0:8000
     logging:
       driver: "json-file"
       options:
@@ -19,7 +19,7 @@ services:
     expose:
       - 8000
     volumes:
-      - /data/django/static:/opt/app/static
+      - django_static:/opt/app/staticfiles
       - /data/django/media:/opt/app/media
     networks:
       - backend
@@ -30,13 +30,21 @@ services:
     depends_on:
       - webdjango
     volumes:
-      - /data/django/static:/opt/app/static
+      - django_static:/opt/app/staticfiles
       - /data/django/media:/opt/app/media
       - /data/django/nginx.conf:/etc/nginx/conf.d/default.conf:rw
     ports:
       - ${host_port}:80
     networks:
       - backend
+
+volumes:
+  django_static:
+    driver: local
+    driver_opts:
+      type: none
+      device: /data/django/static
+      o: bind
 
 networks:
   backend:
