--- a/docker-compose/devops/logging/fluentd/fluent_agent.conf
+++ b/docker-compose/devops/logging/fluentd/fluent_agent.conf
@@ -1,11 +1,11 @@
-#collect data
 <source>
   @type tail
   @id input_tail_containers
   path /logs/docker_logs/*/*-json.log
   pos_file /data/docker.pos
   read_from_head true
-  tag docker.**
+  #tag "docker.**"
+  tag "raw.docker.**"
   skip_refresh_on_startup false
   refresh_interval 10s
   enable_watch_timer true
@@ -13,40 +13,79 @@
   <parse>
     @type "json"
     time_format %Y-%m-%dT%H:%M:%S.%NZ
+    #localtime
   </parse>
 </source>
 
-# Do not collect fluentd's own logs to avoid infinite loops.
+# ignore fluent logs
 <label @FLUENT_LOG>
   <match fluent.**>
     @type null
   </match>
 </label>
 
-# add field with hostname
+# send all exception in 1 block 
+<match raw.docker.**>
+  @id raw.docker
+  @type detect_exceptions
+  remove_tag_prefix raw
+  message log
+  stream stream
+  multiline_flush_interval 5
+  max_bytes 500000
+  max_lines 1000
+</match>
+
+# exclude line
 <filter docker.logs.**>
-  @type record_transformer
-  enable_ruby
-  <record>
-    hostname "#{Socket.gethostname}"
-  </record>
+  @type grep
+  <exclude>
+    key log
+    #pattern /^Got notified from Channel as inactive, attempting reconnect.+$/
+    pattern /Got notified from Channel as inactive/
+  </exclude>
 </filter>
 
+# add new tag on pattern (servise_name in docker-compose)
 <match docker.logs.**>
   @type rewrite_tag_filter
   <rule>
    key $['attrs']['service_name']
-   pattern "^#{ENV['env']}_.+$"
+   pattern ^(.*)
    tag "docker.#{ENV['env']}"
   </rule>
 </match>
+
+# add hostname field
+<filter "docker.#{ENV['env']}">
+  @type record_transformer
+  enable_ruby
+  <record>
+    hostname "#{Socket.gethostname}"
+ </record>
+</filter>
+
+<filter "docker.#{ENV['env']}">
+  @type parser
+  format json
+  key_name log
+  reserve_data true
+</filter>
+
+# default concat
+<filter "docker.#{ENV['env']}">
+  @type concat
+  key log
+  use_partial_metadata true
+  separator ""
+</filter>
 
 <match "docker.#{ENV['env']}">
   @type forward
   @id forward_docker
   <server>
     name main_server
-    host 172.29.27.62
+    host "#{ENV['collector_ip']}" 
     port 24224
   </server>
   <buffer>
@@ -63,3 +102,23 @@
     overflow_action block
   </buffer>
 </match>
+
+
+
+
+#dont worked
+#<filter "docker.#{ENV['env']}">
+#  @type concat
+#  key log
+#  stream_identity_key $['attrs']['tag']
+#  multiline_start_regexp /^.+[_\\\/|].+/
+#  multiline_end_regexp /^.+Spring Boot.+$/
+#</filter>
+
+#<filter "docker.#{ENV['env']}">
+#  @type concat
+#  key log
+#  stream_identity_key $['attrs']['tag']
+#  multiline_start_regexp /^Caused by:[^\n]++(\s+at .++)+/
+#  #multiline_end_regexp /^-e:4:in/
+#</filter>
