--- a/ansible-roles/roles/jenkins_agent/tasks/install-java.yml
+++ b/ansible-roles/roles/jenkins_agent/tasks/install-java.yml
@@ -26,7 +26,7 @@
 
 - name: Download gradle binaries
   get_url:
-    url: "https://jenkins.altarix.ru/jnlpJars/agent.jar"
+    url: "https://jenkins.company.ru/jnlpJars/agent.jar"
     dest: "/u01/jenkins/slave/"
     owner: "jenkins"
  
