--- a/mysql/master5.7.conf
+++ b/mysql/master5.7.conf
@@ -39,7 +39,7 @@ server-id                       = 1
 
 # BINARY LOGGING
 log-bin                         = /data/mysql_bin_logs/mysql-bin.log
-binlog_do_db = rendez_vous,test
+binlog_do_db = test
 expire-logs-days                = 2
 sync-binlog                     = 1   # save in log, after each commit
 
