--- a/mysql/slave5.7.conf
+++ b/mysql/slave5.7.conf
@@ -36,12 +36,13 @@ innodb_print_all_deadlocks     = 1   # print all blocks in DB
 
 #### REPLICA
 server-id                       = 2
+replicate-do-db	= test,sbtest,mysql
 read_only                       = 1  # only read-only
-super_read_only                 = 1  # only read-only
+#super_read_only                 = 1  # only read-only
 
 # BINARY LOGGING
 log-bin                         = /data/mysql_bin_logs/mysql-bin.log
-binlog_do_db = test
+
 expire-logs-days                = 2
 sync-binlog                     = 1   # save in log, after each commit
 
