--- a/mysql/master5.7.conf
+++ b/mysql/master5.7.conf
@@ -39,7 +39,7 @@ server-id                       = 1
 
 # BINARY LOGGING
 log-bin                         = /data/mysql_bin_logs/mysql-bin.log
-binlog_do_db = test
+#binlog_do_db = test     # better don't use, if you need use ignore-db informance-schema
 expire-logs-days                = 2
 sync-binlog                     = 1   # save in log, after each commit
 
