--- a/docker/nifi/docker-compose.yml
+++ b/docker/nifi/docker-compose.yml
@@ -7,18 +7,20 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
     networks:
-      - zk_nifi_1
+      zk_nifi_1:
+        ipv4_address: 192.168.48.3
 
   nifi_1:
     image: apache/nifi:1.9.2
     container_name: nifi_1
     user: root
+#    hostname: b9dc39a63700
     environment:
       - NIFI_WEB_HTTP_PORT=8080
       - NIFI_CLUSTER_IS_NODE=true
       - NIFI_CLUSTER_NODE_PROTOCOL_PORT=8082
       - NIFI_ZK_CONNECT_STRING=zookeeper_1:2181
-      - NIFI_ELECTION_MAX_WAIT=1 min
+      - NIFI_ELECTION_MAX_WAIT=10 sec
     depends_on:
       - zookeeper_1
     ports:
@@ -32,8 +34,13 @@ services:
       - ./nifi/provenance:/opt/nifi/nifi-current/provenance_repository
       - ./nifi/logs:/opt/nifi/nifi-current/logs
       - ./jdbc_driver:/opt/jdbc_driver
+      - ./backup:/opt/nifi/nifi-current/conf-bkp
+    extra_hosts:
+        - "b9dc39a63700:192.168.48.2"
     networks:
-      - zk_nifi_1
+      zk_nifi_1:
+        ipv4_address: 192.168.48.2
 
 networks:
   zk_nifi_1:
+    external: true
