--- a/docker/logging/efk/elasticsearch/elasticsearch.yml
+++ b/docker/logging/efk/elasticsearch/elasticsearch.yml
@@ -4,3 +4,7 @@ node.name: es01
 network.host: 0.0.0.0
 bootstrap.memory_lock: "true"
 discovery.type: single-node
+
+# for browser access, grafana
+#http.cors.enabled: true
+#http.cors.allow-origin: "*"
