--- a/databases/mysql/replication-percona8/slave8.conf
+++ b/databases/mysql/replication-percona8/slave8.conf
@@ -1,7 +1,4 @@
 [mysqld]
-#slave-skip-errors=1032
-skip-host-cache
-
 # COMMON
 user                          = mysql
 socket                        = /var/lib/mysql/mysql.sock
@@ -14,8 +11,10 @@ default-storage-engine        = InnoDB
 symbolic-links                = 0
 sql_mode="NO_ENGINE_SUBSTITUTION"
 skip_name_resolve             = 1 # allow login only with ip
+skip-host-cache
 performance_schema            = 1
 
+# Slow Query
 long_query_time               = 10                               # slow logs 10
 slow-query-log                = 1
 slow-query-log-file           = /var/log/mysql/mysql-slow.log
@@ -24,8 +23,9 @@ log-queries-not-using-indexes = 0
 # base
 max_allowed_packet            = 1G
 max_connections               = 5000
-max_connect_errors            = 1000000
+max_connect_errors            = 100000
 open_files_limit              = 65535
+# codepage
 character_set_server          = utf8
 collation_server              = utf8_unicode_ci
 
@@ -42,16 +42,20 @@ innodb_flush_method            = O_DIRECT
 innodb-file-per-table          = 1
 
 
-#### REPLICA
-server-id                       = 2
+#### REPLICA CONFIG
+server-id                       = 3
 read_only                       = 1  # only read-only
-#super_read_only                 = 1  # only read-only
-
+super_read_only                 = 1  # only read-only
+slave_parallel_type = LOGICAL_CLOCK;
+slave_parallel_workers = 40;
+slave_preserve_commit_order = ON;
 # BINARY LOGGING
-log-bin                         = mysql-bin
+log-bin                         = mysql-bin  # open binary log
 binlog_expire_logs_seconds     	= 600
-max_binlog_size = 2G
-sync-binlog                     = 1   # save in log, after each commit
+max_binlog_size = 2G                         # Specify the size of the binary log
+
+
+
 
 # CACHE
 table_open_cache                 = 10240
