--- a/databases/mysql/replication-percona8/slave8.conf
+++ b/databases/mysql/replication-percona8/slave8.conf
@@ -46,7 +46,7 @@ innodb-file-per-table          = 1
 server-id                       = 3
 read_only                       = 1  # only read-only
 super_read_only                 = 1  # only read-only
-slave_parallel_type = LOGICAL_CLOCK;
+slave_parallel_type = LOGICAL_CLOCK;   # parallel sync
 slave_parallel_workers = 40;
 slave_preserve_commit_order = ON;
 # BINARY LOGGING
