--- a/Orchestration/eks/Deploy-ExternalDNS.yml
+++ b/Orchestration/eks/Deploy-ExternalDNS.yml
@@ -6,7 +6,7 @@ metadata:
   # Otherwise, you may safely omit it.
   annotations:
     # Substitute your account ID and IAM service role name below.
-    iam.amazonaws.com/role: arn:aws:iam::ACCOUNT-ID:role/IAM-SERVICE-ROLE-NAME
+    iam.amazonaws.com/role: arn:aws:iam::474660338267:policy/AllowExternalDNSUpdates
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
