--- a/databases/mysql/percona8-replication-configs/master8.conf
+++ b/databases/mysql/percona8-replication-configs/master8.conf
@@ -4,11 +4,10 @@ skip-host-cache
 # COMMON
 user                          = mysql
 socket                        = /var/lib/mysql/mysql.sock
-pid-file                      = /var/lib/mysql/mysql.pid
+pid-file                      = /var/run/mysqld/mysqld.pid
 log-error                     = /var/log/mysql/mysql-error.log
 port                          = 3306
-#port                          = 9906
-datadir                       = /data/mysql/
+datadir                       = /home/mysql
 bind-address                  = 0.0.0.0
 default-storage-engine        = InnoDB
 symbolic-links                = 0
@@ -24,7 +23,7 @@ slow-query-log                  = 1
 
 # base
 max_allowed_packet            = 1G
-max_connections               = 10000
+max_connections               = 500
 max_connect_errors            = 100000
 open_files_limit              = 65535
 character_set_server          = utf8
@@ -32,11 +31,10 @@ collation_server              = utf8_unicode_ci
 # size
 innodb_buffer_pool_size        = 40G  # cache data/index - 80-90% RAM
 innodb_log_file_size           = 1G  # redo logs size
-innodb_log_buffer_size         = 10M  # tranzaction size, before commit
-innodb_flush_log_at_trx_commit = 0   # after commit tranzaction => sync save on disk
-innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size 
+innodb_log_buffer_size         = 16M  # tranzaction size, before commit
+innodb_flush_log_at_trx_commit = 1   # after commit tranzaction => sync save on disk
+innodb_buffer_pool_instances   = 2   # = count of GB innodb_buffer_pool_size 
 innodb_print_all_deadlocks     = 1   # print all blocks in DB 
-innodb-buffer-pool-size        = 40G
 innodb-file-per-table          = 1
 innodb-flush-log-at-trx-commit  = 1
 innodb-log-files-in-group      = 2
@@ -46,26 +44,25 @@ innodb-flush-method           = O_DIRECT
 server-id                       = 1
 
 # BINARY LOGGING
-log-bin                         = /logs/mysql-bin
+log-bin                         = /home/mysql-logs/mysql-bin
 binlog_expire_logs_seconds      = 600
 max_binlog_size = 2G
 sync-binlog                     = 1   # save in log, after each commit
 
 # CACHE
-table_open_cache                 = 10240
+table_open_cache                 = 200000 # 10240 opened tables in cache
 host_cache_size                  = 0 # disable host cache
 tmp_table_size                   = 2G # temp cache table size on disk               
-max_heap_table_size              = 2G # = tmp_table_size
+max_heap_table_size              = 2G # tmp_table_size
 thread-cache-size               = 500
 table-definition-cache          = 5520
 thread_stack                    = 262144
 
 # better don't use it
-sort_buffer_size                = 7110886
-join_buffer_size                = 7110886
-read_buffer_size                = 7110886
-read_rnd_buffer_size            = 7110886
-
+sort_buffer_size                 = 4M  # buffer for sorting query (ORDER BY,GROUP BY)
+join_buffer_size                 = 12M  # buffer for join query
+read_buffer_size                 = 4M  #
+read_rnd_buffer_size             = 4M
 # MyISAM #
 key-buffer-size                 = 16M
 
