--- a/databases/mysql/percona8-replication-configs/slave8.conf
+++ b/databases/mysql/percona8-replication-configs/slave8.conf
@@ -1,77 +1,79 @@
 [mysqld]
+skip-host-cache
 # COMMON
 user                          = mysql
+#socket                        = /home/mysql/mysql.sock
 socket                        = /var/lib/mysql/mysql.sock
 pid-file                      = /var/run/mysqld/mysqld.pid
 log-error                     = /var/log/mysql/mysql-error.log
 port                          = 3306
-datadir                       = /var/lib/mysql
+datadir                       = /home/mysql
 bind-address                  = 0.0.0.0
 default-storage-engine        = InnoDB
 symbolic-links                = 0
 sql_mode="NO_ENGINE_SUBSTITUTION"
 skip_name_resolve             = 1 # allow login only with ip
-skip-host-cache
 performance_schema            = 1
 
-# Slow Query
-long_query_time               = 10                               # slow logs 10
-slow-query-log                = 1
-slow-query-log-file           = /var/log/mysql/mysql-slow.log
-log-queries-not-using-indexes = 0
+slow-query-log-file             = /var/log/mysql/mysql-slow.log
+long_query_time               = 10                               # slow logs 10s
+log-queries-not-using-indexes   = 0
+slow-query-log                  = 1
+
 
 # base
 max_allowed_packet            = 1G
-max_connections               = 5000
+max_connections               = 500
 max_connect_errors            = 100000
 open_files_limit              = 65535
 # codepage
 character_set_server          = utf8
 collation_server              = utf8_unicode_ci
-
 # size
-innodb_buffer_pool_size        = 40G  # cache data/index - 80-90% RAM
-innodb_log_file_size           = 1G  # redo logs size
-innodb-log-files-in-group      = 2
-innodb_log_buffer_size         = 16M  # tranzaction size, before commit
-innodb_flush_log_at_trx_commit = 0   # after commit tranzaction => sync save on disk
-
-innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size 
-innodb_print_all_deadlocks     = 1   # print all blocks in DB 
-innodb_flush_method            = O_DIRECT
+# files
+innodb_log_file_size           = 1G  # redo logs size - 25% from innodb_buffer_pool_size
 innodb-file-per-table          = 1
-
+innodb-log-files-in-group      = 2
+# buffers
+innodb_buffer_pool_size        = 40G  # cache data/index - 80-90% RAM
+innodb_buffer_pool_instances   = 2   # = count of GB innodb_buffer_pool_size
+innodb_log_buffer_size         = 16M  # tranzaction size, before commit
+# tune
+innodb_flush_log_at_trx_commit = 0   # SLAVE - after commit tranzaction => sync save on disk
+innodb-flush-method           = O_DIRECT
+innodb_print_all_deadlocks     = 1   # print all blocks in DB 
 
 #### REPLICA CONFIG
-server-id                       = 3
+server-id                       = 2
 read_only                       = 1  # only read-only
 super_read_only                 = 1  # only read-only
-slave_parallel_type = LOGICAL_CLOCK;   # parallel sync
-slave_parallel_workers = 40;
-slave_preserve_commit_order = ON;
+slave_parallel_type             = LOGICAL_CLOCK
+slave_parallel_workers          = 25
+slave_preserve_commit_order     = ON
 # BINARY LOGGING
-log-bin                         = mysql-bin  # open binary log
-binlog_expire_logs_seconds     	= 600
-max_binlog_size = 2G                         # Specify the size of the binary log
+log-bin                         = mysql-bin  # SLAVE - open binary log
+binlog_expire_logs_seconds      = 900
+max_binlog_size = 2G
+sync-binlog                     = 0   # save in log, after each commit
 
-
-
+### TIMEOUT - default 28800 - 8 hours
+wait_timeout = 10800
+interactive_timeout = 10800
 
 # CACHE
-table_open_cache                 = 10240
-table-definition-cache          = 5520
+table_open_cache                 = 200000 # 10240 opened tables in cache
+table_definition_cache           = 100000
 host_cache_size                  = 0 # disable host cache
 tmp_table_size                   = 2G # temp cache table size on disk               
-max_heap_table_size              = 2G # = tmp_table_size
+max_heap_table_size              = 2G # tmp_table_size
 thread-cache-size               = 500
-thread_stack                    = 262144
-open-files-limit                = 65535
-#!!!!!!!!!!!!! better don't use it
-sort_buffer_size                = 7110886
-join_buffer_size                = 7110886
-read_buffer_size                = 7110886
-read_rnd_buffer_size            = 7110886
-
+table-definition-cache          = 5520
+thread_stack                    = 256K
+# buffer size
+sort_buffer_size                 = 4M  # buffer for sorting query (ORDER BY,GROUP BY)
+join_buffer_size                 = 12M  # buffer for join query
+read_buffer_size                 = 4M  #
+read_rnd_buffer_size             = 4M
 # MyISAM #
 key-buffer-size                 = 16M
 
