--- a/monitoring/prometheus/Install/alertmanager/config.yml
+++ b/monitoring/prometheus/Install/alertmanager/config.yml
@@ -1,10 +1,35 @@
- route:
-     receiver: 'slack'
+global:
+ resolve_timeout: 1m
+ slack_api_url: 'https://hooks.slack.com/services/wqeqwe/qwewqe/qweqweqweqweq'
 
- receivers:
-     - name: 'slack'
-#       slack_configs:
-#           - send_resolved: true
-#             username: '<username>'
-#             channel: '#<channel-name>'
-#             api_url: '<incomming-webhook-url>'
+route:
+ receiver: 'slack-notifications'
+
+receivers:
+- name: 'slack-notifications'
+  slack_configs:
+  - channel: '#infra-monitoring'
+    send_resolved: true
+    icon_url: https://avatars3.githubusercontent.com/u/3380462
+    title: |-
+      [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }} for {{ .CommonLabels.job }}
+      {{- if gt (len .CommonLabels) (len .GroupLabels) -}}
+        {{" "}}(
+        {{- with .CommonLabels.Remove .GroupLabels.Names }}
+          {{- range $index, $label := .SortedPairs -}}
+            {{ if $index }}, {{ end }}
+            {{- $label.Name }}="{{ $label.Value -}}"
+          {{- end }}
+        {{- end -}}
+        )
+      {{- end }}
+    text: >-
+      {{ range .Alerts -}}
+      *Alert:* {{ .Annotations.title }} test {{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
+ 
+      *Description:* {{ .Annotations.description }}
+       
+      *Details:*
+        {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+        {{ end }}
+      {{ end }}
