--- a/logging/efk/elasticsearch/elasticsearch.yml
+++ b/logging/efk/elasticsearch/elasticsearch.yml
@@ -1,17 +1,21 @@
 ---
 network.host: 0.0.0.0
 discovery.type: single-node
+bootstrap.memory_lock: "true" # disable swapping
 indices.memory.index_buffer_size: 30%
 # default 1000
-cluster.max_shards_per_node: "3000"
+cluster.max_shards_per_node: "100000"
+# for ssd (for hdd 1) dont worked
+#index.merge.scheduler.max_thread_count: 4
+# security
 # enable basic auth - only for standart
 xpack.security.enabled: "true"
 xpack.security.http.ssl.enabled: "false"
-xpack.security.http.ssl.key: "/usr/share/elasticsearch/config/certificates/es.key"
-##xpack.security.http.ssl.certificate_authorities: /etc/elasticsearch/certs/ca.crt
-xpack.security.http.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es.crt"
+xpack.security.http.ssl.key: "/usr/share/elasticsearch/config/certificates/es01.key"
+#xpack.security.http.ssl.certificate_authorities: /etc/elasticsearch/certs/ca.crt
+xpack.security.http.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es01.crt"
 xpack.security.transport.ssl.enabled: "true"
 xpack.security.transport.ssl.verification_mode: certificate
-##xpack.security.transport.ssl.certificate_authorities: /certs/ca.crt
-xpack.security.transport.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es.crt"
-xpack.security.transport.ssl.key: "/usr/share/elasticsearch/config/certificates/es.key"
+#xpack.security.transport.ssl.certificate_authorities: /certs/ca.crt
+xpack.security.transport.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es01.crt"
+xpack.security.transport.ssl.key: "/usr/share/elasticsearch/config/certificates/es01.key"
