--- a/logging/fluentd/nginx/td-agent.conf
+++ b/logging/fluentd/nginx/td-agent.conf
@@ -4,10 +4,12 @@
   path /var/log/nginx/*access.log
   pos_file /var/log/td-agent/nginx-access.log.pos
   tag td.rv-frt.access
+  format json
   <parse>
-    @type regexp
-    expression /^(?<remote_addr>[^ ]*) (?<host>[^ ]*) (?<remote_user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<status_code>[^ ]*) (?<body_bytes_sent>[^ ]*)(?: "(?<http_referer>[^\"]*)" "(?<agent>[^\"]*)"(?:\s+(?<http_x_forwarded_for>[^ ]+))?)? (?<http_host>[^ ]*) (?<request_time>[^ ]*) (?<upstream_status>[^ ]*) (?<upstream_cache_status>[^ ]*) (?<upstream_response_time>[^ ]*) (?<upstream_header_time>[^ ]*) (?<upstream_addr>[^ ]*)$/
-    types status_code:integer,body_bytes_sent:integer
+    #@type regexp
+    #expression /^(?<remote_addr>[^ ]*) (?<host>[^ ]*) (?<remote_user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<status_code>[^ ]*) (?<body_bytes_sent>[^ ]*)(?: "(?<http_referer>[^\"]*)" "(?<agent>[^\"]*)"(?:\s+(?<http_x_forwarded_for>[^ ]+))?)?  (?<http_host>[^ ]*) (?<request_time>[^ ]*) (?<upstream_status>[^ ]*) (?<upstream_cache_status>[^ ]*) (?<upstream_response_time>[^ ]*) (?<upstream_header_time>[^ ]*) (?<upstream_addr>[^ ]*)$/
+    @type json
+    types status_code:integer,status:integer,body_bytes_sent:integer
     time_format %d/%b/%Y:%H:%M:%S %z
   </parse>
 </source>
@@ -19,8 +21,9 @@
   pos_file /var/log/td-agent/nginx-error.log.pos
   tag td.rv-frt.error
   <parse>
-    @type regexp
-    expression /^(?<time>d{4}/d{2}/d{2} d{2}:d{2}:d{2}) [(?<log_level>w+)] (?<pid>d+).(?<tid>d+): (?<message>.*)$/
+    @type none
+#    @type regexp
+#    expression /^(?<time>d{4}/d{2}/d{2} d{2}:d{2}:d{2}) [(?<log_level>w+)] (?<pid>d+).(?<tid>d+): (?<message>.*)$/
     time_format %d/%b/%Y:%H:%M:%S %z
   </parse>
 </source>
