--- a/Languages/php/php-fpm.conf
+++ b/Languages/php/php-fpm.conf
@@ -1,142 +1,11 @@
-[PHP]
-engine = On
-short_open_tag = Off
-precision = 14
-output_buffering = 4096
-zlib.output_compression = Off
-implicit_flush = Off
-unserialize_callback_func =
-serialize_precision = -1
-disable_functions =
-disable_classes =
-zend.enable_gc = On
-zend.exception_ignore_args = On
-expose_php = On
-max_execution_time = 30
-max_input_time = 60
-memory_limit = 1G
-
-; logging
-error_reporting = E_ALL & ~E_NOTICE & ~E_WARNING & ~E_DEPRECATED & ~E_STRICT
-display_errors = on
-display_startup_errors = on
-log_errors = On
-log_errors_max_len = 1024
-ignore_repeated_errors = Off
-ignore_repeated_source = Off
-report_memleaks = On
+[global]
+pid = /run/php-fpm.pid
+emergency_restart_threshold = 3
+;process.priority = -10
+daemonize = yes
+rlimit_files = 131070
+events.mechanism = epoll
+;logging
 error_log = /proc/self/fd/2
-
-variables_order = "GPCS"
-request_order = "GP"
-register_argc_argv = Off
-auto_globals_jit = On
-post_max_size = 8M
-auto_prepend_file =
-auto_append_file =
-default_mimetype = "text/html"
-default_charset = "UTF-8"
-include_path = ".:/usr/share/php:/usr/share/pear:/usr/share/php/yii1:/usr/local/lib/php:/usr/share/php/yii1/framework"
-doc_root =
-user_dir =
-enable_dl = Off
-file_uploads = On
-upload_max_filesize = 10M
-max_file_uploads = 20
-allow_url_fopen = On
-allow_url_include = Off
-default_socket_timeout = 60
-[CLI Server]
-cli_server.color = On
-[Date]
-date.timezone = Europe/Moscow
-[filter]
-[iconv]
-[imap]
-[intl]
-[sqlite3]
-[Pcre]
-[Pdo]
-[Pdo_mysql]
-pdo_mysql.default_socket=
-[Phar]
-[mail function]
-sendmail_path = /usr/sbin/sendmail -t -i
-mail.add_x_header = On
-;SMTP = localhost
-;smtp_port = 25
-[ODBC]
-odbc.allow_persistent = On
-odbc.check_persistent = On
-odbc.max_persistent = -1
-odbc.max_links = -1
-odbc.defaultlrl = 4096
-odbc.defaultbinmode = 1
-[MySQLi]
-mysqli.max_persistent = -1
-mysqli.allow_persistent = On
-mysqli.max_links = -1
-mysqli.default_port = 3306
-mysqli.default_socket =
-mysqli.default_host =
-mysqli.default_user =
-mysqli.default_pw =
-mysqli.reconnect = Off
-[mysqlnd]
-mysqlnd.collect_statistics = On
-mysqlnd.collect_memory_statistics = Off
-[OCI8]
-[PostgreSQL]
-pgsql.allow_persistent = On
-pgsql.auto_reset_persistent = Off
-pgsql.max_persistent = -1
-pgsql.max_links = -1
-pgsql.ignore_notice = 0
-pgsql.log_notice = 0
-[bcmath]
-bcmath.scale = 0
-[browscap]
-[Session]
-session.save_handler = files
-session.use_strict_mode = 0
-session.use_cookies = 1
-session.use_only_cookies = 1
-session.name = PHPSESSID
-session.auto_start = 0
-session.cookie_lifetime = 0
-session.cookie_path = /
-session.cookie_domain =
-session.cookie_httponly =
-session.cookie_samesite =
-session.serialize_handler = php
-session.gc_probability = 1
-session.gc_divisor = 1000
-session.gc_maxlifetime = 1440
-session.referer_check =
-session.cache_limiter = nocache
-session.cache_expire = 180
-session.use_trans_sid = 0
-session.sid_length = 26
-session.trans_sid_tags = "a=href,area=href,frame=src,form="
-session.sid_bits_per_character = 5
-[Assertion]
-zend.assertions = -1
-[COM]
-[mbstring]
-[gd]
-[exif]
-[Tidy]
-tidy.clean_output = Off
-[soap]
-soap.wsdl_cache_enabled=1
-soap.wsdl_cache_dir="/tmp"
-soap.wsdl_cache_ttl=86400
-soap.wsdl_cache_limit = 5
-[sysvshm]
-[ldap]
-ldap.max_links = -1
-[dba]
-[opcache]
-[curl]
-[openssl]
-[ffi]
+log_level = notice
+include=/etc/php-fpm.d/*.conf
