--- a/databases/mysql/percona8-replication-configs/master8.conf
+++ b/databases/mysql/percona8-replication-configs/master8.conf
@@ -1,4 +1,4 @@
-# SERVER 120gb RAM
+# server 200gb RAM
 [mysqld]
 skip-host-cache
 # COMMON
@@ -7,7 +7,7 @@ socket                        = /var/lib/mysql/mysql.sock
 pid-file                      = /var/run/mysqld/mysqld.pid
 log-error                     = /var/log/mysql/mysql-error.log
 port                          = 3306
-datadir                       = /home/mysql
+datadir                       = /data/mysql
 bind-address                  = 0.0.0.0
 default-storage-engine        = InnoDB
 symbolic-links                = 0
@@ -23,28 +23,31 @@ slow-query-log                  = 1
 
 # base
 max_allowed_packet            = 1G
-max_connections               = 500
-max_connect_errors            = 100000
+max_connections               = 25000
+max_connect_errors            = 1000000
 open_files_limit              = 65535
 character_set_server          = utf8
 collation_server              = utf8_unicode_ci
 # size
-innodb_buffer_pool_size        = 40G  # cache data/index - 80-90% RAM
+innodb_buffer_pool_size        = 40G  # cache data/index - 60-80% RAM
 innodb_log_file_size           = 1G  # redo logs size
 innodb_log_buffer_size         = 16M  # tranzaction size, before commit
-innodb_flush_log_at_trx_commit = 1   # after commit tranzaction => sync save on disk
-innodb_buffer_pool_instances   = 2   # = count of GB innodb_buffer_pool_size 
+innodb_flush_log_at_trx_commit = 2   # after commit tranzaction => sync save on disk, if value is 2 - sync to RAM
+innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size, max is 64 
 innodb_print_all_deadlocks     = 1   # print all blocks in DB 
-innodb-file-per-table          = 1
-innodb-flush-log-at-trx-commit  = 1
-innodb-log-files-in-group      = 2
+innodb_file_per_table          = 1   # new tables created in own tablespaces
+innodb_log_files_in_group      = 2   # number of log files
 innodb-flush-method           = O_DIRECT
+
+### TIMEOUT - default 28800 - 8 hours
+wait_timeout = 180
+interactive_timeout = 180
 
 #### MASTER
 server-id                       = 1
 
 # BINARY LOGGING
-log-bin                         = /home/mysql-logs/mysql-bin
+log-bin                         = /data/mysql-logs/mysql-bin
 binlog_expire_logs_seconds      = 600
 max_binlog_size = 2G
 sync-binlog                     = 1   # save in log, after each commit
@@ -54,7 +57,7 @@ table_open_cache                 = 200000 # 10240 opened tables in cache
 host_cache_size                  = 0 # disable host cache
 tmp_table_size                   = 2G # temp cache table size on disk               
 max_heap_table_size              = 2G # tmp_table_size
-thread-cache-size               = 500
+thread-cache-size               = 5000
 table-definition-cache          = 5520
 thread_stack                    = 262144
 
