--- a/databases/mysql/percona8-replication-configs/slave8.conf
+++ b/databases/mysql/percona8-replication-configs/slave8.conf
@@ -15,11 +15,10 @@ sql_mode="NO_ENGINE_SUBSTITUTION"
 skip_name_resolve             = 1 # allow login only with ip
 performance_schema            = 1
 
-slow-query-log-file             = /var/log/mysql/mysql-slow.log
+slow_query_log_file             = /var/log/mysql/mysql-slow.log
+slow_query_log                 = 1 # enable/disable slow query logs
 long_query_time               = 10                               # slow logs 10s
 log-queries-not-using-indexes   = 0
-slow-query-log                  = 1
-
 
 # base
 max_allowed_packet            = 1G
