--- a/databases/mysql/percona8-replication-configs/master8.conf
+++ b/databases/mysql/percona8-replication-configs/master8.conf
@@ -1,4 +1,4 @@
-# server 200gb RAM
+# server 500gb RAM
 [mysqld]
 skip-host-cache
 # COMMON
@@ -15,10 +15,15 @@ sql_mode="NO_ENGINE_SUBSTITUTION"
 skip_name_resolve             = 1 # allow login only with ip
 performance_schema            = 1
 
-slow_query_log_file             = /var/log/mysql/mysql-slow.log
-slow_query_log                 = 1 # enable/disable slow query logs
+slow-query-log-file             = /var/log/mysql/mysql-slow.log
 long_query_time               = 10                               # slow logs 10s
 log-queries-not-using-indexes   = 0
+slow-query-log                  = 1
+
+# fo slave only
+slave_parallel_type             = LOGICAL_CLOCK
+slave_parallel_workers          = 25
+slave_preserve_commit_order     = ON
 
 # base
 max_allowed_packet            = 1G
@@ -32,6 +37,7 @@ innodb_buffer_pool_size        = 40G  # cache data/index - 60-80% RAM
 innodb_log_file_size           = 1G  # redo logs size
 innodb_log_buffer_size         = 16M  # tranzaction size, before commit
 innodb_flush_log_at_trx_commit = 2   # after commit tranzaction => sync save on disk, if value is 2 - sync to RAM
+innodb_flush_log_at_timeout    = 1   # timeout for FSYNC - 1s, if power crash only 1 sec info is gone!
 innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size, max is 64 
 innodb_print_all_deadlocks     = 1   # print all blocks in DB 
 innodb_file_per_table          = 1   # new tables created in own tablespaces
@@ -75,3 +81,4 @@ max-allowed-packet              = 1024M
 pid-file = /var/run/mysqld/mysqld.pid
 socket   = /var/lib/mysql/mysql.sock
 nice     = 0
+
