--- a/databases/mysql/percona8-replication-configs/master8.conf
+++ b/databases/mysql/percona8-replication-configs/master8.conf
@@ -1,6 +1,5 @@
 # server 500gb RAM
 [mysqld]
-skip-host-cache
 # COMMON
 user                          = mysql
 socket                        = /var/lib/mysql/mysql.sock
@@ -17,12 +16,35 @@ performance_schema            = 1
 
 slow-query-log-file             = /var/log/mysql/mysql-slow.log
 long_query_time               = 10                               # slow logs 10s
-log-queries-not-using-indexes   = 0
+log-queries-not-using-indexes   = 1
 slow-query-log                  = 1
 
-# fo slave only
+#### REPLICATION ####################
+# MASTER #
+server-id                       = 1
+innodb_flush_log_at_trx_commit = 2   # after commit tranzaction => sync save on disk, if value is 2 - sync to RAM
+sync-binlog                     = 1   # save in log, after each commit
+# SLAVE #
+#server-id                       = 2
+#read_only                       = 1  # only read-only
+#super_read_only                 = 1  # only read-only
+#sync-binlog                     = 0
+#innodb_flush_log_at_trx_commit = 0
+
+# BINARY LOGGING with optimizations
+log-bin                         = /data/mysql-logs/mysql-bin
+binlog_expire_logs_seconds	= 600
+binlog_format='ROW'
+binlog_transaction_dependency_tracking = WRITESET
+transaction_write_set_extraction='XXHASH64'
+# how many commits wait sync with disk
+binlog_group_commit_sync_no_delay_count = 20
+# how many miliseconds wait to sync with disk 
+binlog_group_commit_sync_delay = 10
+max_binlog_size = 2G
+# fo slave only - parralellism
 slave_parallel_type             = LOGICAL_CLOCK
-slave_parallel_workers          = 25
+slave_parallel_workers          = 16
 slave_preserve_commit_order     = ON
 
 # base
@@ -32,30 +54,23 @@ max_connect_errors            = 1000000
 open_files_limit              = 65535
 character_set_server          = utf8
 collation_server              = utf8_unicode_ci
-# size
-innodb_buffer_pool_size        = 40G  # cache data/index - 60-80% RAM
-innodb_log_file_size           = 1G  # redo logs size
+# redo logs
+innodb_log_file_size           = 5G  # redo logs size - 25% of buffer pool size
 innodb_log_buffer_size         = 16M  # tranzaction size, before commit
-innodb_flush_log_at_trx_commit = 2   # after commit tranzaction => sync save on disk, if value is 2 - sync to RAM
+innodb_log_files_in_group      = 2   # number of log files
+# optimizations
+innodb_buffer_pool_size        = 40G  # cache data/index - 60-80% RAM
 innodb_flush_log_at_timeout    = 1   # timeout for FSYNC - 1s, if power crash only 1 sec info is gone!
 innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size, max is 64 
 innodb_print_all_deadlocks     = 1   # print all blocks in DB 
 innodb_file_per_table          = 1   # new tables created in own tablespaces
-innodb_log_files_in_group      = 2   # number of log files
-innodb-flush-method           = O_DIRECT
-
+innodb_flush_method            = O_DIRECT 
 ### TIMEOUT - default 28800 - 8 hours
-wait_timeout = 180
-interactive_timeout = 180
+wait_timeout = 180 # The number of seconds the server waits for activity on a noninteractive connection before closing it.
+interactive_timeout = 180 # timeout in seconds, which server waits for activity, before close it
 
-#### MASTER
-server-id                       = 1
-
-# BINARY LOGGING
-log-bin                         = /data/mysql-logs/mysql-bin
-binlog_expire_logs_seconds      = 600
-max_binlog_size = 2G
-sync-binlog                     = 1   # save in log, after each commit
+# metrics
+innodb_stats_on_metadata       = ON
 
 # CACHE
 table_open_cache                 = 200000 # 10240 opened tables in cache
@@ -71,6 +86,7 @@ sort_buffer_size                 = 4M  # buffer for sorting query (ORDER BY,GROU
 join_buffer_size                 = 12M  # buffer for join query
 read_buffer_size                 = 4M  #
 read_rnd_buffer_size             = 4M
+thread_pool_size                 = 64 # number of CPU
 # MyISAM #
 key-buffer-size                 = 16M
 
@@ -81,4 +97,3 @@ max-allowed-packet              = 1024M
 pid-file = /var/run/mysqld/mysqld.pid
 socket   = /var/lib/mysql/mysql.sock
 nice     = 0
-
