--- a/databases/mysql/percona8-replication-configs/slave8.conf
+++ b/databases/mysql/percona8-replication-configs/slave8.conf
@@ -1,13 +1,10 @@
-[mysqld]
-skip-host-cache
 # COMMON
 user                          = mysql
-#socket                        = /home/mysql/mysql.sock
 socket                        = /var/lib/mysql/mysql.sock
 pid-file                      = /var/run/mysqld/mysqld.pid
 log-error                     = /var/log/mysql/mysql-error.log
 port                          = 3306
-datadir                       = /home/mysql
+datadir                       = /data/mysql
 bind-address                  = 0.0.0.0
 default-storage-engine        = InnoDB
 symbolic-links                = 0
@@ -15,64 +12,79 @@ sql_mode="NO_ENGINE_SUBSTITUTION"
 skip_name_resolve             = 1 # allow login only with ip
 performance_schema            = 1
 
-slow_query_log_file             = /var/log/mysql/mysql-slow.log
-slow_query_log                 = 1 # enable/disable slow query logs
+slow-query-log-file             = /var/log/mysql/mysql-slow.log
 long_query_time               = 10                               # slow logs 10s
-log-queries-not-using-indexes   = 0
+log-queries-not-using-indexes   = 1
+slow-query-log                  = 1
 
-# base
-max_allowed_packet            = 1G
-max_connections               = 500
-max_connect_errors            = 100000
-open_files_limit              = 65535
-# codepage
-character_set_server          = utf8
-collation_server              = utf8_unicode_ci
-# size
-# files
-innodb_log_file_size           = 1G  # redo logs size - 25% from innodb_buffer_pool_size
-innodb-file-per-table          = 1
-innodb-log-files-in-group      = 2
-# buffers
-innodb_buffer_pool_size        = 40G  # cache data/index - 80-90% RAM
-innodb_buffer_pool_instances   = 2   # = count of GB innodb_buffer_pool_size
-innodb_log_buffer_size         = 16M  # tranzaction size, before commit
-# tune
-innodb_flush_log_at_trx_commit = 0   # SLAVE - after commit tranzaction => sync save on disk
-innodb-flush-method           = O_DIRECT
-innodb_print_all_deadlocks     = 1   # print all blocks in DB 
-
-#### REPLICA CONFIG
+#### REPLICATION ####################
+# MASTER #
+#server-id                       = 1
+#innodb_flush_log_at_trx_commit = 2   # after commit tranzaction => sync save on disk, if value is 2 - sync to RAM
+#sync-binlog                     = 1   # save in log, after each commit
+# SLAVE #
 server-id                       = 2
 read_only                       = 1  # only read-only
 super_read_only                 = 1  # only read-only
-slave_parallel_type             = LOGICAL_CLOCK
-slave_parallel_workers          = 25
-slave_preserve_commit_order     = ON
-# BINARY LOGGING
-log-bin                         = mysql-bin  # SLAVE - open binary log
-binlog_expire_logs_seconds      = 900
-max_binlog_size = 2G
-sync-binlog                     = 0   # save in log, after each commit
+sync-binlog                     = 0
+innodb_flush_log_at_trx_commit = 0
 
+# BINARY LOGGING with optimizations
+log-bin                         = /data/mysql-logs/mysql-bin
+binlog_expire_logs_seconds	= 600
+binlog_format='ROW'
+binlog_transaction_dependency_tracking = WRITESET
+transaction_write_set_extraction='XXHASH64'
+# how many commits wait sync with disk
+binlog_group_commit_sync_no_delay_count = 20
+# how many miliseconds wait to sync with disk 
+binlog_group_commit_sync_delay = 10
+max_binlog_size = 2G
+# fo slave only - parralellism
+slave_parallel_type             = LOGICAL_CLOCK
+slave_parallel_workers          = 16
+slave_preserve_commit_order     = ON
+
+# base
+max_allowed_packet            = 1G
+max_connections               = 25000
+max_connect_errors            = 1000000
+open_files_limit              = 65535
+character_set_server          = utf8
+collation_server              = utf8_unicode_ci
+# redo logs
+innodb_log_file_size           = 5G  # redo logs size - 25% of buffer pool size
+innodb_log_buffer_size         = 16M  # tranzaction size, before commit
+innodb_log_files_in_group      = 2   # number of log files
+# optimizations
+innodb_buffer_pool_size        = 40G  # cache data/index - 60-80% RAM
+innodb_flush_log_at_timeout    = 1   # timeout for FSYNC - 1s, if power crash only 1 sec info is gone!
+innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size, max is 64 
+innodb_print_all_deadlocks     = 1   # print all blocks in DB 
+innodb_file_per_table          = 1   # new tables created in own tablespaces
+innodb_flush_method            = O_DIRECT 
 ### TIMEOUT - default 28800 - 8 hours
-wait_timeout = 10800
-interactive_timeout = 10800
+wait_timeout = 180 # The number of seconds the server waits for activity on a noninteractive connection before closing it.
+interactive_timeout = 180 # timeout in seconds, which server waits for activity, before close it
+
+# metrics
+innodb_stats_on_metadata       = ON
 
 # CACHE
 table_open_cache                 = 200000 # 10240 opened tables in cache
-table_definition_cache           = 100000
 host_cache_size                  = 0 # disable host cache
 tmp_table_size                   = 2G # temp cache table size on disk               
 max_heap_table_size              = 2G # tmp_table_size
-thread-cache-size               = 500
+thread-cache-size               = 5000
 table-definition-cache          = 5520
-thread_stack                    = 256K
-# buffer size
+thread_stack                    = 262144
+
+# better don't use it
 sort_buffer_size                 = 4M  # buffer for sorting query (ORDER BY,GROUP BY)
 join_buffer_size                 = 12M  # buffer for join query
 read_buffer_size                 = 4M  #
 read_rnd_buffer_size             = 4M
+thread_pool_size                 = 64 # number of CPU
 # MyISAM #
 key-buffer-size                 = 16M
 
