--- a/databases/mysql/percona8-replication-configs/master8.conf
+++ b/databases/mysql/percona8-replication-configs/master8.conf
@@ -16,7 +16,7 @@ performance_schema            = 1
 
 slow-query-log-file             = /var/log/mysql/mysql-slow.log
 long_query_time               = 10                               # slow logs 10s
-log-queries-not-using-indexes   = 1
+log-queries-not-using-indexes   = 0   # log all query without indexes, ignore long_query_time, very big log files!
 slow-query-log                  = 1
 
 #### REPLICATION ####################
