--- a/databases/mysql/replication/percona8/slave8.conf
+++ b/databases/mysql/replication/percona8/slave8.conf
@@ -1,3 +1,4 @@
+[mysqld]
 # COMMON
 user                          = mysql
 socket                        = /var/lib/mysql/mysql.sock
@@ -14,7 +15,7 @@ performance_schema            = 1
 
 slow-query-log-file             = /var/log/mysql/mysql-slow.log
 long_query_time               = 10                               # slow logs 10s
-log-queries-not-using-indexes   = 0   # log all query without indexes, ignore long_query_time, very big log files!
+log-queries-not-using-indexes   = 0
 slow-query-log                  = 1
 
 #### REPLICATION ####################
@@ -22,6 +23,7 @@ slow-query-log                  = 1
 #server-id                       = 1
 #innodb_flush_log_at_trx_commit = 2   # after commit tranzaction => sync save on disk, if value is 2 - sync to RAM
 #sync-binlog                     = 1   # save in log, after each commit
+#log-bin                         = /data/mysql-logs/mysql-bin
 # SLAVE #
 server-id                       = 2
 read_only                       = 1  # only read-only
@@ -30,7 +32,6 @@ sync-binlog                     = 0
 innodb_flush_log_at_trx_commit = 0
 
 # BINARY LOGGING with optimizations
-log-bin                         = /data/mysql-logs/mysql-bin
 binlog_expire_logs_seconds	= 600
 binlog_format='ROW'
 binlog_transaction_dependency_tracking = WRITESET
@@ -46,21 +47,22 @@ slave_parallel_workers          = 16
 slave_preserve_commit_order     = ON
 
 # base
-max_allowed_packet            = 1G
-max_connections               = 25000
+max_allowed_packet            = 512M
+max_connections               = 20000
 max_connect_errors            = 1000000
 open_files_limit              = 65535
 character_set_server          = utf8
 collation_server              = utf8_unicode_ci
 # redo logs
-innodb_log_file_size           = 5G  # redo logs size - 25% of buffer pool size
-innodb_log_buffer_size         = 16M  # tranzaction size, before commit
+innodb_log_file_size           = 2G  # redo logs size - 25% of buffer pool size
+innodb_log_buffer_size         = 32M  # tranzaction size, before commit
 innodb_log_files_in_group      = 2   # number of log files
+max_relay_log_size             = 512M  # redo logs max size
 # optimizations
 innodb_buffer_pool_size        = 40G  # cache data/index - 60-80% RAM
 innodb_flush_log_at_timeout    = 1   # timeout for FSYNC - 1s, if power crash only 1 sec info is gone!
 innodb_buffer_pool_instances   = 40   # = count of GB innodb_buffer_pool_size, max is 64 
-innodb_print_all_deadlocks     = 1   # print all blocks in DB 
+innodb_print_all_deadlocks     = 0   # print all deadblocks in DB 
 innodb_file_per_table          = 1   # new tables created in own tablespaces
 innodb_flush_method            = O_DIRECT 
 ### TIMEOUT - default 28800 - 8 hours
@@ -71,22 +73,22 @@ interactive_timeout = 180 # timeout in seconds, which server waits for activity,
 innodb_stats_on_metadata       = ON
 
 # CACHE
-table_open_cache                 = 200000 # 10240 opened tables in cache
+table_open_cache                 = 51200 # 10240 opened tables in cache
 host_cache_size                  = 0 # disable host cache
-tmp_table_size                   = 2G # temp cache table size on disk               
-max_heap_table_size              = 2G # tmp_table_size
+tmp_table_size                   = 6G # temp cache table size on disk, example ((created_tmp_disk_tables*100/(created_tmp_tables+created_tmp_disk_tables)) = ((278571*100/(1617536 + 278571)) = 14.69%
+max_heap_table_size              = 6G # should be=tmp_table_size
 thread-cache-size               = 5000
 table-definition-cache          = 5520
 thread_stack                    = 262144
 
-# better don't use it
-sort_buffer_size                 = 4M  # buffer for sorting query (ORDER BY,GROUP BY)
-join_buffer_size                 = 12M  # buffer for join query
-read_buffer_size                 = 4M  #
-read_rnd_buffer_size             = 4M
-thread_pool_size                 = 64 # number of CPU
+# sum in mb for per user = 60mb Buffers such as join_buffer_size, sort_buffer_size, read_buffer_size and read_rnd_buffer_size are allocated per connection.
+sort_buffer_size                 = 1M  # buffer for sorting query (ORDER BY,GROUP BY), dont increase more then 2M!
+join_buffer_size                 = 6M  # buffer for join query
+read_buffer_size                 = 256K # better dont increase it
+read_rnd_buffer_size             = 1M # from 256K to reduce RD RPS
+thread_pool_size                 = 64 # number of CPU cores
 # MyISAM #
-key-buffer-size                 = 16M
+key_buffer_size                 = 32M
 
 [mysqldump]
 max-allowed-packet              = 1024M
