--- a/logging/efk/install/elasticsearch/elasticsearch.yml
+++ b/logging/efk/install/elasticsearch/elasticsearch.yml
@@ -1,6 +1,8 @@
 ---
 network.host: 0.0.0.0
-discovery.type: single-node
+#discovery.type: single-node
+discovery.seed_hosts: [ "elasticsearch" ]
+cluster.initial_master_nodes: [ "elasticsearch" ]
 bootstrap.memory_lock: "true" # disable swapping
 indices.memory.index_buffer_size: 30%
 # default 1000
@@ -8,14 +10,19 @@ cluster.max_shards_per_node: "100000"
 # for ssd (for hdd 1) dont worked
 #index.merge.scheduler.max_thread_count: 4
 # security
+# api keys
+xpack.security.authc.api_key.enabled: true
+
 # enable basic auth - only for standart
+# sudo openssl req -x509 -nodes -days 3650 -newkey rsa:2048 -keyout selfsigned.key -out selfsigned.crt
+# certs ended in 31.03.2024
 xpack.security.enabled: "true"
-xpack.security.http.ssl.enabled: "false"
-xpack.security.http.ssl.key: "/usr/share/elasticsearch/config/certificates/es01.key"
-#xpack.security.http.ssl.certificate_authorities: /etc/elasticsearch/certs/ca.crt
-xpack.security.http.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es01.crt"
+xpack.security.http.ssl.enabled: "true"
 xpack.security.transport.ssl.enabled: "true"
-xpack.security.transport.ssl.verification_mode: certificate
-#xpack.security.transport.ssl.certificate_authorities: /certs/ca.crt
-xpack.security.transport.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es01.crt"
+xpack.security.http.ssl.key: "/usr/share/elasticsearch/config/certificates/es01.key"
+xpack.security.http.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es01.crt"
+xpack.security.http.ssl.certificate_authorities: /usr/share/elasticsearch/config/certificates/ca.crt
 xpack.security.transport.ssl.key: "/usr/share/elasticsearch/config/certificates/es01.key"
+xpack.security.transport.ssl.certificate: "/usr/share/elasticsearch/config/certificates/es01.crt"
+xpack.security.transport.ssl.certificate_authorities: /usr/share/elasticsearch/config/certificates/ca.crt
+xpack.security.transport.ssl.verification_mode: certificate
