--- a/logging/efk/install/kibana/kibana.yml
+++ b/logging/efk/install/kibana/kibana.yml
@@ -1,10 +1,15 @@
+---
 # Default Kibana configuration for docker target
-server.name: kibana
+server.name: "kibana"
 server.host: "0.0.0.0"
 monitoring.ui.container.elasticsearch.enabled: true
-elasticsearch.hosts: [ "http://elasticsearch:9200" ]
-elasticsearch.ssl.verificationMode: "none"
-elasticsearch.username: elastic
-elasticsearch.password: QWE123qwe
 xpack.security.encryptionKey: "EePXCifCaykPORQwxcGbINHCPFYnNXZT"
 xpack.encryptedSavedObjects.encryptionKey: "EePXCifCaykPORQwxcGbINHCPFYnNXZT"
+server.ssl.enabled: true
+#elasticsearch.ssl.verificationMode: "none"
+server.ssl.certificate: /usr/share/elasticsearch/config/certificates/es01.crt
+server.ssl.key: /usr/share/elasticsearch/config/certificates/es01.key
+elasticsearch.hosts: [ "https://es01:9200" ]
+elasticsearch.username: "elastic"
+elasticsearch.password: "QWE123qwe"
+elasticsearch.ssl.certificateAuthorities: [ "/usr/share/elasticsearch/config/certificates/ca.crt" ]
